--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<iframe src="https://appygen.net/home" style="border:none;width:100%;height:100%;" allowTransparency="true"></iframe>
+<iframe src="https://appygen.net" style="border:none;width:100%;height:100%;min-height:800px;" allowTransparency="true"></iframe>
 
 	
     <div class="language">
