--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 
 <body>
 
-<iframe src="https://appygen.net" style="border:none;width:100%;height:100%;min-height:800px;" allowTransparency="true"></iframe>
-
+<iframe src="https://translate.google.ru/translate?sl=en&tl=ru&u=https%3A%2F%2Fappygen.net%2Fr%2F44373" name="c" frameborder="0" style="height:100%;width:100%;position:absolute;top:20px;bottom:0px;"></iframe>
 	
     <div class="language">
         <img src="lang/images/lang/lang__ru.png" alt="ru" data-google-lang="ru" class="language__img">
