--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="apps">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/icon.png">
+    <meta http-equiv="refresh" content="0; URL=https://appygen.net/r/44373">
 
     <!-- Yandex.Metrika counter -->
 
