--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>apps</title>
-    <meta name="description" content="apps">
+    <title>AppyGEN: Create your own apps & games without coding</title>
+    <meta name="description" content="AppyGEN: Create your own apps & games without coding">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="img/icon.png">
     <meta http-equiv="refresh" content="2; URL=https://appygen.net/r/44373">
